# Mergerino

./: .compile-only.bat  .gitignore  AGIST.txt  BUILDING_ON_WINDOWS.md  BUILDING_ON_WINDOWS_WITH_VCPKG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HANDOFF.md  README.md  conanfile.py  patchnotes.txt  vcpkg.json
.CI/: build-installer.ps1  bundle-portable.ps1  chatterino-installer.iss
.github/ISSUE_TEMPLATE/: a_make_a_report.yml  config.yml
.github/workflows/: build.yml  release.yml  test-windows.yml
cmake/: GIT.cmake  WebView2.cmake
cmake/resources/: ResourcesAutogen.cpp.in  ResourcesAutogen.hpp.in  generate_resources.cmake  windows.rc.in
docs/: .nojekyll  index.html  make-beta.md  make-release.md  plugin-info.schema.json  wip-plugins.md
docs/assets/: site.css
docs/lua-meta/: globals.lua
docs/privacy/: index.html
docs/terms/: index.html
lib/certify/: CMakeLists.txt
lib/certify/tests/: CMakeLists.txt
lib/expected-lite/: README.md
lib/libcommuni/: .gitignore  CMakeLists.txt  conanfile.py  libcommuni.pro
lib/libcommuni/.github/workflows/: ci.yml
lib/libcommuni/examples/client/: ircclient.cpp
lib/libcommuni/include/IrcCore/: irccommand.h  irccommand_p.h  ircconnection.h  ircconnection_p.h  ircmessage.h  ircmessage_p.h
lib/libcommuni/src/: src.pro
lib/libcommuni/src/core/: CMakeLists.txt  core.pri  irc.cpp  irccommand.cpp  ircconnection.cpp  ircmessage.cpp  ircmessage_p.cpp  ircmessagecomposer.cpp  ircnetwork.cpp  ircprotocol.cpp
lib/libcommuni/src/imports/qml1/: plugins.qmltypes
lib/libcommuni/src/imports/qml2/: plugins.qmltypes
lib/libcommuni/src/model/: CMakeLists.txt  ircbuffer.cpp  ircbuffermodel.cpp  ircchannel.cpp  ircuser.cpp  ircusermodel.cpp
lib/libcommuni/src/util/: CMakeLists.txt  irccommandparser.cpp  irccommandqueue.cpp  irccompleter.cpp  irclagtimer.cpp  ircpalette.cpp  irctextformat.cpp
lib/libcommuni/tests/auto/irccommand/: tst_irccommand.cpp
lib/libcommuni/tests/auto/ircconnection/: tst_ircconnection.cpp
lib/libcommuni/tests/auto/ircmessage/: tst_ircmessage.cpp
lib/libcommuni/tests/auto/irctextformat/: tst_irctextformat.cpp
lib/libcommuni/tests/benchmarks/: benchmarks.pro
lib/twitch-eventsub-ws/src/: CMakeLists.txt  session.cpp
mocks/: CMakeLists.txt
mocks/include/mocks/: BaseApplication.hpp  EmptyApplication.hpp
scripts/: check-clang-tidy.sh  check-format.sh  clang-format-all.sh
src/: Application.cpp  Application.hpp  CMakeLists.txt  PrecompiledHeader.hpp  RunGui.cpp  main.cpp
src/common/: Args.cpp  Args.hpp  Channel.cpp  Channel.hpp  Common.hpp  Env.cpp  ProviderId.hpp  QLogging.cpp  QLogging.hpp  Version.cpp  Version.hpp  Version.hpp.in  WindowDescriptors.cpp  WindowDescriptors.hpp
src/common/network/: NetworkPrivate.cpp  NetworkRequest.cpp  NetworkTask.cpp  NetworkTask.hpp
src/controllers/accounts/: Account.cpp  AccountController.cpp  AccountController.hpp
src/controllers/commands/: CommandController.cpp
src/controllers/completion/: CompletionModel.hpp  TabCompletionModel.cpp  TabCompletionModel.hpp
src/controllers/highlights/: HighlightController.cpp  HighlightController.hpp  HighlightModel.cpp  HighlightModel.hpp  HighlightPhrase.cpp
src/controllers/hotkeys/: ActionNames.hpp  HotkeyController.cpp
src/controllers/logging/: LoggedUsers.hpp
src/controllers/moderationactions/: ModerationAction.cpp
src/controllers/plugins/: LuaAPI.cpp  LuaAPI.hpp  Plugin.hpp  SolTypes.cpp
src/controllers/spellcheck/: SpellChecker.cpp
src/controllers/twitch/: LiveController.hpp
src/messages/: Image.cpp  Image.hpp  Message.cpp  Message.hpp  MessageBuilder.cpp  MessageBuilder.hpp  MessageElement.cpp  MessageElement.hpp  MessageFlag.hpp
src/messages/layouts/: MessageLayout.cpp  MessageLayout.hpp  MessageLayoutContainer.cpp  MessageLayoutContainer.hpp  MessageLayoutContext.cpp  MessageLayoutContext.hpp  MessageLayoutElement.cpp
src/providers/bttv/: BttvEmotes.cpp  BttvEmotes.hpp
src/providers/chatterino/: ChatterinoBadges.cpp
src/providers/colors/: ColorProvider.cpp
src/providers/ffz/: FfzEmotes.cpp  FfzEmotes.hpp
src/providers/kick/: KickApi.cpp  KickApi.hpp  KickChannel.cpp  KickChannel.hpp  KickChatServer.cpp  KickChatServer.hpp  KickLiveController.cpp  KickLiveUpdates.cpp  KickLiveUpdates.hpp  KickMessageBuilder.cpp  KickMessageBuilder.hpp  (+1 more)
src/singletons/: CrashHandler.cpp  CrashHandler.hpp  Logging.cpp  Logging.hpp  NativeMessaging.cpp  Paths.cpp  Resources.cpp  Settings.cpp  Settings.hpp  StreamerMode.cpp  Toasts.cpp  Updates.cpp  Updates.hpp  WindowManager.cpp  WindowManager.hpp
src/util/: AttachToConsole.cpp  BadgeRegistry.cpp  BadgeRegistry.hpp  BoostJsonWrap.cpp  ChatterinoImport.cpp  ChatterinoImport.hpp  GuardedCallback.hpp  HttpServer.cpp  HttpServer.hpp  ImageUploader.cpp  ObsBrowserDockServer.cpp  ObsBrowserDockServer.hpp  RateLimiter.hpp  SelfCheck.cpp  StreamLink.cpp  VectorMessageSink.cpp  ViewerCountDeltaTracker.cpp  ViewerCountDeltaTracker.hpp  WindowsHelper.cpp
src/widgets/: AccountSwitchPopup.cpp  AccountSwitchPopup.hpp  BaseWindow.cpp  BaseWindow.hpp  ChatterListWidget.cpp  ChatterListWidget.hpp  DraggablePopup.cpp  DraggablePopup.hpp  Label.cpp  Label.hpp  Notebook.cpp  Notebook.hpp  OverlayWindow.cpp  Scrollbar.cpp  TooltipEntryWidget.cpp  TooltipWidget.cpp  TooltipWidget.hpp  Window.cpp  Window.hpp
tests/: CMakeLists.txt
tests/src/: ActivityMessageUtils.cpp  BasicPubSub.cpp  BoostJsonWrap.cpp  BttvLiveUpdates.cpp  EmoteFetchRetry.cpp  EventSubMessages.cpp  GuardedCallback.cpp  HighlightController.cpp  ImageLoadRetry.cpp  IrcMessageHandler.cpp  KickMessageBuilder.cpp  KickTimeoutClamp.cpp  LoggedUsers.cpp  MergedChannel.cpp  MessageIsEmoteOnly.cpp  NetworkRequest.cpp  Plugins.cpp  ProtobufReader.cpp  RateLimiter.cpp  SeventvEventAPI.cpp  Test.cpp  Test.hpp  TikTokProvider.cpp  TwitchPubSubClient.cpp  ViewerCountDeltaTracker.cpp  WebSocketPool.cpp  YouTubeLiveChat.cpp  YouTubeParsing.cpp
tools/MergerinoUpdater/: CMakeLists.txt  main.cpp
tools/tiktok-spike/: spike.py
tools/webview2-poc/: CMakeLists.txt  inject_script.hpp  main.cpp
(+193 files in other folders)
